[project]
name = "org-social-relay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.14.0",
    "django-filter>=24.0",
    "huey>=2.5.0",
    "redis>=4.0.0",
    "requests>=2.31.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]
